adds email form

--- a/app/assets/stylesheets/cerouno.sass
+++ b/app/assets/stylesheets/cerouno.sass
@@ -62,7 +62,7 @@ a:hover, a:focus
 label
   font-family: $font-bold
 
-input
+input, textarea
   font-family: $font-lighter
   color: $color-gray
 
@@ -87,6 +87,9 @@ body, h1, h2, h3, h4, h5, h6
 
 small.form-text.text-alert
   color: $color-danger
+
+small.form-text.text-alert.reversed
+  color: white
 
 .btn
   margin: .25vw .25vh
