--- a/app/assets/stylesheets/site.sass
+++ b/app/assets/stylesheets/site.sass
@@ -1,3 +1,6 @@
+.bg-pink
+  background-color: $color-dark-pink
+
 .site
   .container-fluid
     padding: 0
@@ -22,7 +25,7 @@
       h5.precio-anterior
         text-decoration: line-through
 
-    .valor
+    .propuesta
       margin: 0
       padding: 10vh 5vw 10vh 5vw
 
@@ -35,9 +38,21 @@
       background-color: $color-dark-pink
       color: white
 
-    .programa
+    .program
       margin: 0
       padding: 10vh 5vw 10vh 5vw
 
       h3
         color: $color-dark-pink
+
+    .contact
+      margin: 0
+      padding: 10vh 5vw 10vh 5vw
+      background-color: $color-dark-pink
+      color: white
+
+    .footer
+      margin: 0
+      padding: 2.5vh 5vw 5vh 5vw
+      background-color: $color-dark-pink
+      color: white
